[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.2.2", features = [ "v4" ]}
regex = "1.7"
num-bigint = "0.4"
num-traits = "0.2"
itertools = "0.10"
rand = "0.8"
nalgebra-glm = "0.18"